tests/NormalTests/paczka1/fuzzy1/47327195.err
Error in line 1: S197 S197 42,2
Error in line 14: fD5oSpV S197 36,9
Error in line 19: S197 S197 89,63
Error in line 18: fD5oSpV A945 14,8
Error in line 17: S197 A48 64,8
Error in line 25: OQaK A945 54,1
Error in line 23: z3qWp39 S197 48,8
Error in line 32: ZPLvtBn S352 340,6
Error in line 29: z3qWp39 S352 71,6
